# edgar.archetype

./: README.md  archetype.rhai  archetype.yaml
contents/base/{{ project-name }}/: pyproject.toml
contents/base/{{ project-name }}/.github/workflows/: build_docker_container.yml
contents/base/{{ project-name }}/.platform/kubernetes/base/: configmap.yaml  secrets_bucket_policy_platform_task.yaml
contents/package/{{ project-name }}/src/{{ project_name }}/{{ package_name }}/: driver.py  main.py
contents/package/{{ project-name }}/src/{{ project_name }}/{{ package_name }}/resources/: input.json
